--- a/registration/test/fixtures/users.yml
+++ b/registration/test/fixtures/users.yml
@@ -3,9 +3,12 @@
 # This model initially had no columns defined.  If you add columns to the
 # model remove the '{}' from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
-#
-one: {}
-# column: value
-#
-two: {}
-#  column: value
+
+
+
+<% 50.times do |n| %>
+user_nr_<%= n %>:
+  name:  <%= "Username#{n}" %>
+  email: <%= "UserMail-#{n}@example.com" %>
+  password_digest: <%= BCrypt::Password.create("unencrypted_password")%>
+<% end %>
