--- a/registration/Gemfile
+++ b/registration/Gemfile
@@ -48,3 +48,5 @@ gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
 gem 'coffee-script-source', '1.8.0'
 gem 'will_paginate', '~> 3.0.6'
 gem 'bootstrap-will_paginate', '~> 0.0.10'
+
+gem 'omniauth-github'
