--- a/registration/Gemfile
+++ b/registration/Gemfile
@@ -50,3 +50,4 @@ gem 'will_paginate', '~> 3.0.6'
 gem 'bootstrap-will_paginate', '~> 0.0.10'
 
 gem 'omniauth-github'
+gem 'rack-cors', :require => 'rack/cors'
