--- a/registration/Gemfile
+++ b/registration/Gemfile
@@ -51,3 +51,6 @@ gem 'bootstrap-will_paginate', '~> 0.0.10'
 
 gem 'omniauth-github'
 gem 'rack-cors', :require => 'rack/cors'
+
+
+gem "redis", "~> 3.0.1"
