--- a/registration/test/fixtures/tags.yml
+++ b/registration/test/fixtures/tags.yml
@@ -4,8 +4,7 @@
 # model remove the '{}' from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: {}
-# column: value
-#
-two: {}
-#  column: value
+<% 30.times do |n| %>
+tag_nr_<%= n %>:
+  name:  <%= "Restaurang#{n}" %>
+<% end %>
