--- a/registration/Gemfile
+++ b/registration/Gemfile
@@ -52,5 +52,7 @@ gem 'bootstrap-will_paginate', '~> 0.0.10'
 gem 'omniauth-github'
 gem 'rack-cors', :require => 'rack/cors'
 
-
 gem "redis", "~> 3.0.1"
+
+gem 'rabl'
+gem 'responders', '~> 2.0'
