--- a/registration/test/fixtures/restaurants.yml
+++ b/registration/test/fixtures/restaurants.yml
@@ -19,15 +19,16 @@ restaurant:
   created_at: <%= Time.now - 5.second  %>
 
 restaurant_to_remove:
-  id: 500
+  id: 2
   name: Bästa pizzerian 2
   phone: 321654987
   address: Vägen 5 33033 Växjö
   description: Pizzerian servera pizza och kebab
   longitude: 50
   latitude: 50
-  apiuser_id: 2
-  created_at: <%= Time.now - 4.second  %>
+  apiuser: apiuser_nr_1
+  tags: tag_nr_1, tag_nr_2
+  created_at: <%= Time.now - 1.second  %>
 
 <% 30.times do |n| %>
 restaurant_nr_<%= n %>:
@@ -38,6 +39,6 @@ restaurant_nr_<%= n %>:
   longitude: <%= "#{n * 3}" %>
   latitude: <%= "#{n * 2}" %>
   apiuser_id: 1
-  id: <%= "#{n+2}" %>
+  id: <%= "#{n+3}" %>
   created_at: <%= Time.now + n.second  %>
 <% end %>
