--- a/registration/test/fixtures/tags.yml
+++ b/registration/test/fixtures/tags.yml
@@ -8,6 +8,27 @@ tag:
   id: 1
   name: Pizzerior
 
+pizza:
+  id: 2
+  name: pizza
+
+kebab:
+  id: 3
+  name: kebab
+
+sushi:
+  id: 4
+  name: sushi
+
+cafe:
+  id: 5
+  name: cafe
+
+mongolisk:
+  id: 6
+  name: mongolisk
+
+
 <% 30.times do |n| %>
 tag_nr_<%= n %>:
   name:  <%= "Restaurang#{n}" %>
