--- a/registration/config/database.yml
+++ b/registration/config/database.yml
@@ -21,5 +21,10 @@ test:
   database: db/test.sqlite3
 
 production:
-  <<: *default
-  database: db/production.sqlite3
+  adapter: mysql2
+  encoding: utf8
+  database: rails
+  username: rails
+  password: fkrIwTo33I
+  host: 127.0.0.1
+  port: 3306
